[package]
name = "banqi_rust"
version = "0.2.1"
edition = "2021"
authors = ["Brian Liou"]
description = "MistyBanqi engine core + Python (PyO3) bindings — Banqi (Chinese Dark Chess) αβ + Star1 chance-node search."
license = "MIT"
repository = "https://github.com/brianhliou/misty-banqi"

[lib]
name = "banqi_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module"] }
